# jaxis

./: .gitignore  README.md  pyproject.toml
docs/: .gitignore  next.config.mjs  package.json  tsconfig.json
docs/app/: globals.css  layout.tsx
docs/app/[[...mdxPath]]/: page.tsx
docs/components/: default-badge.tsx  permutation-equivariant.tsx  permutation-invariant.tsx
docs/components/elementwise-independent/: index.tsx
docs/components/mask-invariant/: index.tsx
docs/components/shared/: atoms.ts  circle.tsx  input-output.tsx  jacobian.tsx
docs/components/triangular-dependent/: index.tsx
docs/content/: _meta.ts  composing-metrics.mdx  concepts.mdx  designing-testing-strategy.mdx  index.mdx  metrics.mdx  quick-start.mdx  roadmap.mdx
docs/content/api-reference/: _meta.ts  common_typing.mdx  constants.mdx  exceptions.mdx  index.mdx
docs/content/archetypes/: _meta.ts  advanced-usage.mdx  batch.mdx  index.mdx  interpreting-results.mdx  mask.mdx  time.mdx
docs/content/semantic-properties/: _meta.ts  advanced-usage.mdx  elementwise-independent.mdx  index.mdx  interpreting-results.mdx  mask-invariant.mdx  permutation-equivariant.mdx  permutation-invariant.mdx  property-reference.mdx  (+1 more)
docs/lib/: constants.ts  content-constants.ts  fonts.ts  utils.ts
src/jaxis/: __init__.py  common_typing.py  console.py  constants.py  exceptions.py
src/jaxis/dsl/: ast.py  (+1 more)
tests/: conftest.py  fixtures.py  test_deferred_call.py  test_elementwise_independence.py  test_equivariant_permutability.py  test_invariant_permutability.py  test_mask_archetype.py  test_mask_invariant.py
(+42 files in other folders)
